# seed-bootstrap

./: Cargo.toml  README.md
.semaphore/: semaphore.yml
example/backend/: Cargo.toml
example/backend/src/: main.rs
example/frontend/: Cargo.toml  index.html
example/frontend/css/: style.scss
example/frontend/src/: lib.rs  page.rs
example/frontend/src/page/: buttons.rs  components.rs  mod.rs  not_found.rs
example/frontend/src/page/components/: button_groups.rs  buttons.rs  dropdowns.rs  navbars.rs
example/frontend/static/js/: example-dashboard-chart.js
js/: popper_wrapper.js
src/: button_group.rs  components.rs  dropdown.rs
src/components/: button.rs  form_group.rs  navbar.rs
