[package]
name = "seed-bootstrap"
description = "Components for using Bootstrap toolkit with Seed framework"
version = "0.2.0"
edition = "2018"
repository = "https://github.com/panoptix-za/web-bundler"
license = "MIT/Apache-2.0"
keywords = ["seed"]
categories = ["web-programming"]
authors = [
  "Martin Kavík <martin@kavik.cz>",
  "Panoptix OSS maintainers <oss@panoptix.io>",
]

[dependencies]
seed = "0.8"
wasm-bindgen = "0.2"

[dependencies.uuid]
version = "1.2"
features = ["wasm-bindgen", "v4"]

[dependencies.web-sys]
version = "0.3"
features = ["HtmlElement"]
